--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,14 @@ dist
 dist-ssr
 *.local
 
+# Environment variables
+.env
+.env.local
+.env.production
+
+# Database
+server/guests.xlsx
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -22,9 +30,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-
-# Environment variables
-.env
-.env.local
-.env.production
-
