--- a/env.example
+++ b/env.example
@@ -1,8 +1,17 @@
-# Backend API URL
+# Backend API URL (NO trailing slash!)
 VITE_API_URL=http://localhost:3002
 
-# For production, change to your domain:
-# VITE_API_URL=https://your-domain.com
-# or
-# VITE_API_URL=https://api.your-domain.com
+# For production server with IP address:
+# VITE_API_URL=http://178.160.249.7:3002
+
+# For production with domain name (ASCII only, no Armenian characters!):
+# VITE_API_URL=https://wedding.example.com
+# VITE_API_URL=https://api.wedding.example.com
+
+# IMPORTANT:
+# 1. NO Armenian characters in domain!
+# 2. NO trailing slash (/)
+# 3. Include http:// or https://
+# 4. Include port if not using 80/443
+
 
