--- a/.gitignore
+++ b/.gitignore
@@ -13,12 +13,12 @@ dist-ssr
 *.local
 
 # Environment variables
-.env
-.env.local
-.env.production
+# .env
+# .env.local
+# .env.production
 
-# Database
-server/guests.xlsx
+# # Database
+# server/guests.xlsx
 
 # Editor directories and files
 .vscode/*
